[package]
name = "ant-path-matcher"
version = "0.1.0"
authors = ["m77can <m77can@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
validator = "0.14.0"
chashmap = "2.2.2"
substring = "1.4.5"